# RexP1-Neck

./: README.md
.github/: FUNDING.yml
docs/: BOM-RexP1-Neck.md  Errors.md  Libraries.md  Overview.md  Todo.md  Video.md
firmware/: CMakeLists.txt
firmware/src/: AstroDroidConfig.h  CMakeLists.txt  ConfigEntity.cpp  LEDBarAgent.cpp  LEDBarAgent.h  main.cpp
pcb/TexP1-Neck/: TexP1-Neck.csv  TexP1-Neck.kicad_pcb  TexP1-Neck.kicad_prl  TexP1-Neck.kicad_pro  TexP1-Neck.kicad_sch  fp-info-cache
pcb/fabrication/: Astro Droid BodyNeck-B_Cu.gbr  Astro Droid BodyNeck-B_Mask.gbr  Astro Droid BodyNeck-B_Paste.gbr  Astro Droid BodyNeck-B_Silkscreen.gbr  Astro Droid BodyNeck-Edge_Cuts.gbr  Astro Droid BodyNeck-F_Cu.gbr  Astro Droid BodyNeck-F_Mask.gbr  Astro Droid BodyNeck-F_Paste.gbr  Astro Droid BodyNeck-F_Silkscreen.gbr  Astro Droid BodyNeck-In1_Cu.gbr  Astro Droid BodyNeck-In2_Cu.gbr  Astro Droid BodyNeck-job.gbrjob  Astro Droid BodyNeck.drl
